--- a/nginx.conf
+++ b/nginx.conf
@@ -1,14 +1,21 @@
 server {
     listen 80;
     server_name erp.fattahinfotech.com;
+    return 301 https://$host$request_uri;
+}
 
-    location /static/ {
-        alias /app/static/;
-    }
+server {
+    listen 443 ssl;
+    server_name erp.fattahinfotech.com;
+
+    ssl_certificate     /etc/letsencrypt/live/erp.fattahinfotech.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/erp.fattahinfotech.com/privkey.pem;
 
     location / {
         proxy_pass http://web:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
