--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,35 @@
-version: "3.9"
+version: '3.9'
 
 services:
   db:
     image: postgres:15
-    container_name: erp_postgres
-    environment:
-      POSTGRES_DB: erp_db
-      POSTGRES_USER: erp_user
-      POSTGRES_PASSWORD: strongpassword
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
     restart: always
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
 
   web:
     build: .
-    container_name: erp_web
-    command: gunicorn erp_system.wsgi:application --bind 0.0.0.0:8000
+    command: gunicorn your_project_name.wsgi:application --bind 0.0.0.0:8000
     volumes:
       - .:/app
     ports:
       - "8000:8000"
     depends_on:
       - db
-    env_file:
-      - .env
-    restart: always
-
-  nginx:
-    image: nginx:latest
-    container_name: erp_nginx
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - static_volume:/app/static
-    depends_on:
-      - web
+    environment:
+      DEBUG: '0'
+      DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
+      ALLOWED_HOSTS: ${ALLOWED_HOSTS}
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_HOST: db
+      POSTGRES_PORT: 5432
     restart: always
 
 volumes:
   postgres_data:
-  static_volume:
